Polishing.
Add tests that assert initialization constraints, use early return to default value in case of null and align code format.

Original Pull Request: #2637